[package]
name = "ens-decoder"
version = "0.1.0"
description = "An ENS decoder, built as a wrap"
authors = ["dOrgJelli"]
license = "MIT"
edition = "2021"

[dependencies]
polywrap-wasm-rs = { version = "0.1.0" }
serde = { version = "1.0", features = ["derive"] }
lazy_static = { version = "1.4.0" }
regex = { version = "1.7.3" }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 's'
lto = true
panic = 'abort'
